<?xml version="1.0" encoding="utf-8"?>
<!-- 
	FireZenk's Progress Bar <A highly customizable progress bar>
    Copyright (C) 2012 Jorge Garrido Oval (aka: FireZenk)

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
<resources>

    <string name="app_name">FireZenk\'s ProgressBar</string>
    
	<string name="test1">Test one: INDETERMINATE</string>
	<string name="test2">Test two: ONESHOT</string>
	<string name="test3">Test three: ONESHOT</string>
	<string name="test4">Test four: INDETERMINATE 3 bars</string>
	<string name="test5">Test five: DETERMINATE</string>
	<string name="button">Animate</string>
	<string name="button2">Stop</string>
	<string name="button3">+</string>
	<string name="button4">Reset</string>
</resources>